2003-09-05  Jordi Mallach  <jordi@sindominio.net>

	* POTFILES.in: Update renamed file.
	* ca.po: Updated Catalan translation.

2003-09-05  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-09-04  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>

        * es.po: Updated Spanish translation by
                 Francisco Javier F. Serrador <serrador@arrakis.es>.

2003-09-03  Artur Flinta  <aflinta@cvs.gnome.org>

	* pl.po: Updated Polish translation.

2003-09-02  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-09-02  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.
	* POTFILES.in: src/sj-muzicbrainz.c was renamed to
	src/sj-metadata-muzicbrainz.c.

2003-09-02  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-09-01  Metin Amiroff  <metin@karegen.com>

	* az.po: Added Azerbaijani translation.

2003-08-30  Wang Jian  <lark@linux.net.cn>

	* zh_CN.po: Added Simplified Chinese translation by
	Mai Hao Hui <mhh@ricetons.com>.

2003-08-27  Ole Laursen  <olau@hardworking.dk>

	* da.po: Added Danish translation.

2003-08-25  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2003-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Update Norwegian translation.

2003-08-19  Artur Flinta  <aflinta@cvs.gnome.org>

	* pl.po: Updated Polish translation.

2003-08-18  Jordi Mallach  <jordi@sindominio.net>

	* ca.po: Updated Catalan translation.

2003-08-17  Christophe Merlet  <redfox@redfoxcenter.org>

	* fr.po: Updated French translation.

2003-08-14  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-08-14  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-08-11  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>

        * es.po: Updated Spanish translation by
                 Francisco Javier F. Serrador <serrador@arrakis.es>.
