@@ -1,10 +1,10 @@
+# List of source files containing translatable strings.
+# Please keep this file sorted alphabetically.
 data/sound-juicer.glade
 data/sound-juicer.desktop.in
 data/sound-juicer.schemas.in
-
 src/cd-drive.c
 src/bacon-cd-selection.c
-src/sj-musicbrainz.c
 src/sj-extractor.c
 src/sj-error.c
 src/sj-util.c
@@ -12,3 +12,4 @@ src/sj-about.c
 src/sj-prefs.c
 src/sj-extracting.c
 src/sj-main.c
+src/sj-metadata-musicbrainz.c
