@@ -1,3 +1,8 @@
+2003-09-06  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Updated renamed file.
+	* sv.po: Updated Swedish translation.
+
 2003-09-05  Jordi Mallach  <jordi@sindominio.net>
 
 	* POTFILES.in: Update renamed file.
